array and buttons setup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <!-- Local CSS -->
         <link rel="stylesheet" href="assets/css/style.css">
 
+        <!-- JQUERY CDN -->
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+
         <!-- Javascript -->
         <script src="assets/javascript/script.js"></script>
 
