form work continues

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
                     <p>Test Text</p>
                 </div>
                 <div class="col-4" id="search-field">
-                    <p>Test Text</p>
+                        <form>
+                                <div class="form" id="actor-search">
+                                  <label for="name-search">Enter Your Actor's Name</label>
+                                  <input type="text" class="form-control" id="name-search" aria-describedby="UserSubmission" placeholder="Actor Name">
+                                </div>
+                                <input id='add-actor' type="submit" value="Submit">
+                        </form>
                 </div>
             </div>
         </div>
