script code complete and commented

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="row justify-content-center mt-3">
                 <div class="col-7" id="gif-display"></div>
                 <div class="col-3 p-1" id="search-field">
-                        <form>
+                        <form class="actor-search-form">
                             <div class="form-group col-11" id="actor-search">
                                 <label for="name-search">Enter Your Actor's Name</label>
                                 <input type="text" class="form-control" id="name-search" aria-describedby="UserSubmission" placeholder="Actor Name">
@@ -50,7 +50,7 @@
                                 <button type="submit" class="btn btn-primary mb-2 ml-3" id='add-actor'>Submit</button>
                         </form>
                         <hr>
-                        <form>
+                        <form class="show-more-gifs">
                             <div class="form-group col-11 show-more">
                                 <label for="Gif-Amount">How many more pictures would you like to see?</label>
                                 <select class="form-control" id="how-many-more">
