--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
     <body>
         <div class="fluid-container">
-            <dif class="row justify-content-center">
-                <div class="col-10 pl-5">
+            <dif class="row justify-content-center mt-3">
+                <div class="col-10 pl-5 text-center" id="header">
                     <h1>Actor Gif Search</h1>
                     <p>Click the actors below or enter your own actors in the search field to the right to see the gifs!</p>
                 </div>
             </dif>
             <div class="row justify-content-center">
-                <div class="col-10 pr-5 pl-5 pt-2 pb-2" id="button-container"></div>
+                <div class="col-10 pr-5 pl-5 pt-2 pb-2 mt-3" id="button-container"></div>
             </div>
         </div>
             <div class="row justify-content-center mt-3">
-                <div class="col-7" id="gif-display"></div>
+                <div class="col-7 " id="gif-display"></div>
                 <div class="col-3 p-1" id="search-field">
                         <form class="actor-search-form">
                             <div class="form-group col-11" id="actor-search">
@@ -49,8 +49,8 @@
                             </div>
                                 <button type="submit" class="btn btn-primary mb-2 ml-3" id='add-actor'>Submit</button>
                         </form>
-                        <hr>
                         <form class="show-more-gifs">
+                                <hr>
                             <div class="form-group col-11 show-more">
                                 <label for="Gif-Amount">How many more pictures would you like to see?</label>
                                 <select class="form-control" id="how-many-more">
