--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         
-        <title>Gif Tastic!</title>
+        <title>Actor Gif Search</title>
+        <!-- Meta Tags-->
+        <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Boot Strap-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -21,8 +24,9 @@
         <div class="fluid-container">
             <dif class="row justify-content-center mt-3">
                 <div class="col-10 pl-5 text-center" id="header">
-                    <h1>Actor Gif Search</h1>
-                    <p>Click the actors below or enter your own actors in the search field to the right to see the gifs!</p>
+                    <h1>Actor Gif Search!</h1>
+                    <p>Select an actor below or enter your own actor in the search field to the right to see some gifs!</p>
+                    <p>Click on the image to play the gif!</p>
                 </div>
             </dif>
             <div class="row justify-content-center">
@@ -52,7 +56,7 @@
                         <form class="show-more-gifs">
                                 <hr>
                             <div class="form-group col-11 show-more">
-                                <label for="Gif-Amount">How many more pictures would you like to see?</label>
+                                <label for="Gif-Amount">How many more Gifs would you like to see?</label>
                                 <select class="form-control" id="how-many-more">
                                 <option>1</option>
                                 <option>5</option>
